# cartridges

./: .gitignore  README.md  pyproject.toml  test_generation.py
cartridges/: __init__.py  cache.py  cache_fast.py  config.py  context.py  datasets.py  evaluate.py  generate_baseline.py  generation.py  icl_baseline.py  icl_baseline_kv_cache_compression.py  optim.py  parallelism.py  rag_baseline.py  retrievers.py  structs.py  synthesize.py  train.py  train_cachemodel_fsdp.py  train_ddp_benchmarking.py  train_torchrun_fsdp.py  transforms.py
cartridges/analysis/: utils.py
cartridges/baselines/: benchmark_sglang.py  kv_press.py  mtob.py  mtob_kv_cache_compression.py
cartridges/benchmarking/: agentic_it.tex
cartridges/clients/: anthropic.py  base.py  mixin.py  openai.py  openai_batch.py  sglang.py  together.py  tokasaurus.py  tokasaurus_batch.py  tokasaurus_serverless.py  usage.py
cartridges/configs/: Untitled-1.ipynb  codehop_baseline.py  codehop_synthesize.py  codehop_train.py  codehop_train_levels.py  utils.py  (+8 more)
examples/: tutorial.ipynb
infra/: modal_deploy_sglang.py  modal_deploy_tksrs.py  modal_deploy_tksrs_w_cartridges.py  modal_deploy_tokasaurus.py  modal_deploy_vllm.py
scratch/: m06d17_test_tksrs_async.py  m06d18_email.py  m06d18_email_client.py  m08d18_analyze.ipynb  reproduce_nccl_timeout.py  test123.py  upload_to_hf.py  upload_to_wandb.py
scripts/: arxiv_synthesize.py  longhealth_synthesize.py  longhealth_train.py  mcp_synthesize.py  test_modal.py
viz/: README.md  index.html  package-lock.json  package.json  requirements.txt  start.sh  vite.config.js
(+1379 files in other folders)
